--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
   <meta charset="UTF-8">
-  <title>Horgony</title>
+  <title>Vasmacska</title>
   <style>
     body {
       background-color: #121212;
@@ -17,7 +17,8 @@
       text-align: center;
     }
     h1 {
-      font-size: 36px;
+      font-size: 40px;
+      letter-spacing: 1px;
       margin-bottom: 40px;
     }
     button {
@@ -36,13 +37,18 @@
       margin-top: 30px;
       font-size: 16px;
       max-width: 500px;
+      line-height: 1.5;
     }
   </style>
 </head>
 <body>
-  <h1>Horgony</h1>
+  <h1>VASMACSKA</h1>
   <button onclick="openGame()">Játék megnyitása új lapon</button>
-  <p>Horgony – Egy történet a becsület visszaszerzéséről, a múlt terhéről, és a tenger igazságáról.</p>
+  <p>
+    Szövegközpontú, magyar nyelvű, döntésalapú RPG, amely böngészőben fut.  
+    A játékos egy történetbe lép, ahol választásaink határozzák meg a cselekményt, a karakter sorsát és a világ reakcióit.  
+    Grafikamentes, de hangulatban gazdag, teljesen interaktív élmény.
+  </p>
 
   <script>
     function openGame() {
