--- a/indito.html
+++ b/indito.html
@@ -11,19 +11,20 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       height: 100vh;
       margin: 0;
+      padding-top: 60px;
       text-align: center;
     }
     h1 {
-      font-size: 40px;
+      font-size: 44px;
       letter-spacing: 1px;
       margin-bottom: 40px;
     }
     button {
-      font-size: 20px;
-      padding: 14px 28px;
+      font-size: 22px;
+      padding: 16px 32px;
       background-color: #444;
       color: white;
       border: none;
@@ -35,9 +36,9 @@
     }
     p {
       margin-top: 30px;
-      font-size: 16px;
-      max-width: 500px;
-      line-height: 1.5;
+      font-size: 18px;
+      max-width: 520px;
+      line-height: 1.6;
     }
   </style>
 </head>
