--- a/index.html
+++ b/index.html
@@ -5,41 +5,45 @@
   <title>Vasmacska</title>
   <style>
     body {
-      background-color: #121212;
-      color: #f0f0f0;
-      font-family: Georgia, serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      height: 100vh;
-      margin: 0;
-      padding-top: 60px;
-      text-align: center;
-    }
-    h1 {
-      font-size: 44px;
-      letter-spacing: 1px;
-      margin-bottom: 40px;
-    }
-    button {
-      font-size: 22px;
-      padding: 16px 32px;
-      background-color: #444;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #666;
-    }
-    p {
-      margin-top: 30px;
-      font-size: 18px;
-      max-width: 520px;
-      line-height: 1.6;
-    }
+  background-color: #121212;
+  color: #f0f0f0;
+  font-family: Georgia, serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; /* ne legyen teljesen középen */
+  height: 100vh;
+  margin: 0;
+  padding-top: 100px; /* Ezt növeld, hogy lentebb legyen */
+  text-align: center;
+}
+
+h1 {
+  font-size: 52px; /* nagyobb cím */
+  letter-spacing: 1px;
+  margin-bottom: 40px;
+}
+
+button {
+  font-size: 24px; /* nagyobb gombszöveg */
+  padding: 18px 36px; /* nagyobb gombméret */
+  background-color: #444;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #666;
+}
+
+p {
+  margin-top: 30px;
+  font-size: 20px; /* nagyobb szöveg */
+  max-width: 600px; /* szépen tördelve, nem túl széles */
+  line-height: 1.7; /* kényelmes olvasás */
+}
   </style>
 </head>
 <body>
