--- a/index.html
+++ b/index.html
@@ -5,45 +5,40 @@
   <title>Vasmacska</title>
   <style>
     body {
-  background-color: #121212;
-  color: #f0f0f0;
-  font-family: Georgia, serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start; /* ne legyen teljesen középen */
-  height: 100vh;
-  margin: 0;
-  padding-top: 100px; /* Ezt növeld, hogy lentebb legyen */
-  text-align: center;
-}
-
-h1 {
-  font-size: 52px; /* nagyobb cím */
-  letter-spacing: 1px;
-  margin-bottom: 40px;
-}
-
-button {
-  font-size: 24px; /* nagyobb gombszöveg */
-  padding: 18px 36px; /* nagyobb gombméret */
-  background-color: #444;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #666;
-}
-
-p {
-  margin-top: 30px;
-  font-size: 20px; /* nagyobb szöveg */
-  max-width: 600px; /* szépen tördelve, nem túl széles */
-  line-height: 1.7; /* kényelmes olvasás */
-}
+      color: #222;
+      font-family: Georgia, serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      height: 100vh;
+      margin: 0;
+      padding-top: 100px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 60px; /* még nagyobb cím */
+      letter-spacing: 1px;
+      margin-bottom: 40px;
+    }
+    button {
+      font-size: 24px;
+      padding: 18px 36px;
+      background-color: #444;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #666;
+    }
+    p {
+      margin-top: 30px;
+      font-size: 20px;
+      max-width: 600px;
+      line-height: 1.7;
+    }
   </style>
 </head>
 <body>
@@ -51,7 +46,7 @@ p {
   <button onclick="openGame()">Játék megnyitása új lapon</button>
   <p>
     Szövegközpontú, magyar nyelvű, döntésalapú RPG, amely böngészőben fut.  
-    A játékos egy történetbe lép, ahol választásaink határozzák meg a cselekményt, a karakter sorsát és a világ reakcióit.  
+    A játékos egy történetbe lép, ahol választásai határozzák meg a cselekményt, a karakter sorsát és a világ reakcióit.  
     Grafikamentes, de hangulatban gazdag, teljesen interaktív élmény.
   </p>
 
