--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       text-align: center;
     }
     h1 {
-      font-size: 60px; /* még nagyobb cím */
+      font-size: 65px; /* még nagyobb cím */
       letter-spacing: 1px;
       margin-bottom: 40px;
     }
@@ -45,9 +45,9 @@
   <h1>VASMACSKA</h1>
   <button onclick="openGame()">Játék megnyitása új lapon</button>
   <p>
-    Szövegközpontú, magyar nyelvű, döntésalapú RPG, amely böngészőben fut.  
-    A játékos egy történetbe lép, ahol választásai határozzák meg a cselekményt, a karakter sorsát és a világ reakcióit.  
-    Grafikamentes, de hangulatban gazdag, teljesen interaktív élmény.
+  Egy magyar nyelvű, szövegközpontú RPG, ahol minden döntés számít.  
+  A történet a böngésződben kel életre — grafikamentes, de hangulatban gazdag.  
+  Teljesen interaktív élmény, ahol a sorsod a választásaidon múlik.
   </p>
 
   <script>
