--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <button onclick="openGame()">Játék megnyitása új lapon</button>
   <p>
   Egy magyar nyelvű, szövegközpontú RPG, ahol minden döntés számít.  
-  A történet a böngésződben kel életre — grafikamentes, de hangulatban gazdag.  
+  A történet a böngésződben kel életre. Grafikamentes, de hangulatban gazdag.  
   Teljesen interaktív élmény, ahol a sorsod a választásaidon múlik.
   </p>
 
