--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
   <h1>VASMACSKA</h1>
   <button onclick="openGame()">Játék megnyitása új lapon</button>
 
-  <div class="info-line">Sorsod a választásaidon múlik.</div>
-  <div class="info-line">Döntésalapú játékmenet.</div>
-  <div class="info-line">Hangulatban gazdag.</div>
-  <div class="info-line">Interaktív jelenetek.</div>
-  <div class="info-line">Böngészőben fut.</div>
-  <div class="info-line">Magyar nyelvű.</div>
-  <div class="info-line">Szövegközpontú.</div>
-  <div class="info-line">Grafikamentes.</div>
+  <div class="info-line">Sorsod a választásaidon múlik</div>
+  <div class="info-line">Döntésalapú játékmenet</div>
+  <div class="info-line">Hangulatban gazdag</div>
+  <div class="info-line">Interaktív jelenetek</div>
+  <div class="info-line">Böngészőben fut</div>
+  <div class="info-line">Szövegközpontú</div>
+  <div class="info-line">Grafikamentes</div>
+  <div class="info-line">Magyar nyelvű</div>
   
 
   <script>
