--- a/index.html
+++ b/index.html
@@ -64,5 +64,10 @@
       window.open("game.html", "_blank");
     }
   </script>
+
+  <div style="margin-top: 60px; font-size: 16px; line-height: 1.6; text-align: center;">
+  <p>Tervező: Czékmási Zsolt</p>
+  <p>Szerkesztő: Copilot</p>
+</div>
 </body>
 </html>
