--- a/game.html
+++ b/game.html
@@ -5,47 +5,65 @@
   <title>Vasmacska – Indulás</title>
   <style>
     body {
-      font-family: Georgia, serif;
-      color: #222;
       margin: 0;
-      padding: 60px 20px;
+      padding: 0;
+      font-family: Georgia, serif;
+      color: #f0f0f0;
+      background-image: url('képek/gamewall.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
       text-align: center;
     }
 
     .story {
-      font-size: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 800px;
+      margin: 20px;
+      font-size: clamp(12px, 2.5vw, 20px);
       line-height: 1.8;
-      max-width: 700px;
-      margin: 0 auto 60px auto;
+    }
+
+    .button-container {
+      margin-top: 40px;
     }
 
     button {
-      font-size: 22px;
-      padding: 16px 32px;
-      background-color: #444;
-      color: white;
+      font-size: clamp(24px, 5vw, 48px);
+      padding: 20px 40px;
+      background-color: #222;
+      color: #f0f0f0;
       border: none;
-      border-radius: 6px;
+      border-radius: 10px;
       cursor: pointer;
     }
 
     button:hover {
-      background-color: #666;
+      background-color: #444;
     }
   </style>
 </head>
 <body>
 
   <div class="story">
-    A Brit Birodalom hatalma a tengeren épül, de a Karib térség sötét vizein nem a király parancsa uralkodik, hanem a kalózok kardja.  
-    Az anyaország kikötőjében a hajnal ködében egy fregatt halkan ring a hullámokon.  
-    A fedélzetén tengerészek készülnek az indulásra. Nem tudják, hogy mi vár rájuk a világ túlsó felén.  
-    Az út hosszú, 7 hét az Atlanti-óceánon.  
-    Sokan remélték, hogy zsákmányból vagy prémiumból pénzhez juthatnak.  
-    A parancs világos: „Védjétek meg a gyarmatokat. Semmisítsétek meg a kalózokat. Hozzátok haza a birodalom dicsőségét.”
+    A Brit Birodalom hatalma a tengeren épül, de a Karib-térség sötét vizein nem a király parancsa uralkodik, hanem a kalózok kardja.  
+    Az anyaország kikötőjében, a hajnal ködében egy fregatt halkan ring a hullámokon.  
+    A fedélzetén tengerészek készülnek az indulásra. Nem tudják, mi vár rájuk a világ túlsó felén.  
+    Az út hosszú: hét hét az Atlanti-óceánon.  
+    Sokan remélik, hogy zsákmányból vagy prémiumból pénzhez jutnak.  
+    A parancs világos: „Védjétek meg a gyarmatokat! Semmisítsétek meg a kalózokat! Hozzátok haza a birodalom dicsőségét!”
   </div>
 
-  <button onclick="location.href='hnaplo.html'">Hajónapló</button>
+  <div class="button-container">
+    <button onclick="location.href='hnaplo.html'">Hajónapló</button>
+  </div>
 
 </body>
 </html>
