--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
       padding: 0;
       font-family: Georgia, serif;
       color: #f0f0f0;
-      background-image: url('képek/gamewall.png');
+      background-image: url('images/gamewall.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
