--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <script>
     function openGame() {
-      window.open("game.html", "_blank");
+      window.open("1r1afil.html", "_blank");
     }
   </script>
 
