--- a/1r1afil.html
+++ b/1r1afil.html
@@ -2,14 +2,14 @@
 <html lang="hu">
 <head>
   <meta charset="UTF-8">
-  <title>Vasmacska – Indulás</title>
+  <title>Bevezető</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: Georgia, serif;
       color: #f0f0f0;
-      background-image: url('images/gamewall.png');
+      background-image: url('1r1apic.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -62,7 +62,7 @@
   </div>
 
   <div class="button-container">
-    <button onclick="location.href='hnaplo.html'">Hajónapló</button>
+    <button onclick="location.href='1r2afil.html'">Hajónapló</button>
   </div>
 
 </body>
