--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
   <meta charset="UTF-8">
-  <title>Vasmacska</title>
+  <title>Megnyitó</title>
   <style>
     body {
       font-family: Georgia, serif;
