--- a/1r1afil.html
+++ b/1r1afil.html
@@ -4,38 +4,52 @@
   <meta charset="UTF-8">
   <title>Bevezető</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
       font-family: Georgia, serif;
       color: #f0f0f0;
+      overflow: hidden;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background-image: url('1r1apic.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      text-align: center;
+      z-index: -1;
+    }
+
+    .content {
+      position: relative;
+      height: 100%;
+      overflow-y: auto;
+      padding: 40px 20px;
+      box-sizing: border-box;
+      background-color: rgba(0, 0, 0, 0.5);
     }
 
     .story {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      border-radius: 10px;
       max-width: 800px;
-      margin: 20px;
+      margin: 0 auto;
       font-size: clamp(12px, 2.5vw, 20px);
       line-height: 1.8;
+      text-align: center;
     }
 
     .button-container {
-      margin-top: 40px;
+      margin-top: 60px;
+      text-align: center;
     }
 
-    button {
+    .button-container button {
       font-size: clamp(24px, 5vw, 48px);
       padding: 20px 40px;
       background-color: #222;
@@ -45,24 +59,26 @@
       cursor: pointer;
     }
 
-    button:hover {
+    .button-container button:hover {
       background-color: #444;
     }
   </style>
 </head>
 <body>
 
-  <div class="story">
-    A Brit Birodalom hatalma a tengeren épül, de a Karib-térség sötét vizein nem a király parancsa uralkodik, hanem a kalózok kardja.  
-    Az anyaország kikötőjében, a hajnal ködében egy fregatt halkan ring a hullámokon.  
-    A fedélzetén tengerészek készülnek az indulásra. Nem tudják, mi vár rájuk a világ túlsó felén.  
-    Az út hosszú: hét hét az Atlanti-óceánon.  
-    Sokan remélik, hogy zsákmányból vagy prémiumból pénzhez jutnak.  
-    A parancs világos: „Védjétek meg a gyarmatokat! Semmisítsétek meg a kalózokat! Hozzátok haza a birodalom dicsőségét!”
-  </div>
+  <div class="content">
+    <div class="story">
+      A Brit Birodalom hatalma a tengeren épül, de a Karib-térség sötét vizein nem a király parancsa uralkodik, hanem a kalózok kardja.  
+      Az anyaország kikötőjében, a hajnal ködében egy fregatt halkan ring a hullámokon.  
+      A fedélzetén tengerészek készülnek az indulásra. Nem tudják, mi vár rájuk a világ túlsó felén.  
+      Az út hosszú: hét hét az Atlanti-óceánon.  
+      Sokan remélik, hogy zsákmányból vagy prémiumból pénzhez jutnak.  
+      A parancs világos: „Védjétek meg a gyarmatokat! Semmisítsétek meg a kalózokat! Hozzátok haza a birodalom dicsőségét!”
+    </div>
 
-  <div class="button-container">
-    <button onclick="location.href='1r2afil.html'">Hajónapló</button>
+    <div class="button-container">
+      <button onclick="location.href='1r1bfil.html'">Hajónapló kinyitása</button>
+    </div>
   </div>
 
 </body>
