--- a/1r1afil.html
+++ b/1r1afil.html
@@ -37,11 +37,12 @@
     }
 
     .story {
-      max-width: 800px;
-      margin: 0 auto;
-      font-size: clamp(12px, 2.5vw, 20px);
-      line-height: 1.8;
-      text-align: center;
+  font-family: Garamond, serif;
+  font-size: clamp(12px, 1.5vw, 16px);
+  line-height: 1.8;
+  color: #002b5c; /* tengerészkék */
+  text-align: center;
+  text-shadow: 0.5px 0.5px #003366; /* vékony szegélyhatás */
     }
 
     .button-container {
