--- a/1r1afil.html
+++ b/1r1afil.html
@@ -38,11 +38,11 @@
 
     .story {
   font-family: Garamond, serif;
-  font-size: clamp(12px, 1.5vw, 16px);
+  font-size: clamp(10px, 1.2vw, 14px);
   line-height: 1.8;
   color: #002b5c; /* tengerészkék */
   text-align: center;
-  text-shadow: 0.5px 0.5px #003366; /* vékony szegélyhatás */
+  text-shadow: 2px 2px #cccccc; /* vékony szegélyhatás */
     }
 
     .button-container {
