--- a/1r1afil.html
+++ b/1r1afil.html
@@ -40,9 +40,9 @@
   font-family: Garamond, serif;
   font-size: clamp(10px, 1.2vw, 14px);
   line-height: 1.8;
-  color: #000000; /* fekete betű */
+  color: #ffffff;
   text-align: center;
-  text-shadow: 2px 2px 4px #ffffff; /* fehér, nagy árnyék */
+  text-shadow: 2px 2px 4px #000000;
     }
 
     .button-container {
