--- a/1r1afil.html
+++ b/1r1afil.html
@@ -36,13 +36,15 @@
       background-color: rgba(0, 0, 0, 0.5);
     }
 
-    .story {
+.story {
   font-family: Garamond, serif;
   font-size: clamp(10px, 1.2vw, 14px);
   line-height: 1.8;
-  color: #ffffff;
+  color: #000000; /* fekete betű */
   text-align: center;
-  text-shadow: 2px 2px 4px #000000;
+  text-shadow: 2px 2px 6px #dddddd; /* világos szürke, nagy árnyék */
+}
+    
     }
 
     .button-container {
