--- a/1r1afil.html
+++ b/1r1afil.html
@@ -38,11 +38,11 @@
 
 .story {
   font-family: Garamond, serif;
-  font-size: clamp(14px, 1.5vw, 16px);
+  font-size: clamp(13px, 1.3vw, 13px);
   line-height: 1.8;
-  color: #000000; /* fekete betű */
+  color: #0000FF; /* fekete betű */
   text-align: center;
-  text-shadow: 2px 2px 6px #dddddd; /* világos szürke, nagy árnyék */
+  text-shadow: 5px 5px 5px #dddddd; /* világos szürke, nagy árnyék */
 }
     
     }
@@ -95,6 +95,8 @@
       „Védjétek meg a gyarmatokat!
       Semmisítsétek meg a kalózokat!
       Hozzátok haza a birodalom dicsőségét!”
+
+      
     </div>
 
     <div class="button-container">
