--- a/1r1afil.html
+++ b/1r1afil.html
@@ -39,9 +39,9 @@ body::before {
   font-family: Garamond, serif;
   font-size: clamp(13px, 1.3vw, 13px);
   line-height: 1.8;
-  color: #0033CC; /* fekete betű */
+  color: #000033;
   text-align: center;
-  text-shadow: 50px 50px 50px #996600; /* világos szürke, nagy árnyék */
+  text-shadow: 4px 4px 12px #CC9933;
 }
     
     }
